force-app/main/default/objects/Case_Participation__c/Case_Participation__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Case Participation</label>
    <nameField>
        <label>Case Participation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>