force-app/main/default/objects/Case_Participation__c/fields/Client_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Household_ID__c</fullName>
    <description>Used by ExpCaseParticipationTrigger</description>
    <formula>Participant__r.Client_Household__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Household ID</label>
    <type>Text</type>
</CustomField>