force-app/main/default/objects/Case_Participation__c/fields/Create_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Create_Relationship__c</fullName>
    <description>Original formula:</description>
    <formula>IF(!ISBLANK(TEXT(Relationship_to_Main_Client__c))
&amp;&amp; CONTAINS(Create_Relationship_Types__c, TEXT(Relationship_to_Main_Client__c)), true, false)</formula>
    <inlineHelpText>Whether or not to auto-create a relationship between the main client and the case participant when a case participant record is created.</inlineHelpText>
    <label>Create Relationship</label>
    <type>Checkbox</type>
</CustomField>