force-app/main/default/objects/Case_Participation__c/fields/Create_Relationship_Types__c.field-meta.xml
<CustomField>
    <fullName>Create_Relationship_Types__c</fullName>
    <formula>&apos;Child, Grandchild, Grandparent, Niece / Nephew,  Other, Parent, Partner, Sibling, Spouse&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Relationship Types</label>
    <type>Text</type>
</CustomField>