force-app/main/default/objects/Case_Participation__c/fields/ExpUnique__c.field-meta.xml
<CustomField>
    <fullName>ExpUnique__c</fullName>
    <description>Combination of Case_Record__c and Participant__c.</description>
    <externalId>true</externalId>
    <label>ExpUnique</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>