force-app/main/default/objects/Case_Participation__c/fields/Is_Main_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Client__c</fullName>
    <formula>IF(Case_Record__r.Main_Client__c =  Participant__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yes if the Case Participant is the main client on a case record.</inlineHelpText>
    <label>Is Main Client</label>
    <type>Text</type>
</CustomField>