force-app/main/default/objects/Case_Participation__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Participations</relationshipLabel>
    <relationshipName>Program_Participation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>