force-app/main/default/objects/Case_Participation__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Participant__r.Client_Full_Name__c</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>