force-app/main/default/objects/Case_Participation__c/fields/Record_Service__c.field-meta.xml
<CustomField>
    <fullName>Record_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked the Case Participant appears in the Service Entry screen for receiving services.</inlineHelpText>
    <label>Record Service</label>
    <type>Checkbox</type>
</CustomField>