force-app/main/default/objects/Case_Participation__c/fields/Standards_Apply_QA_only__c.field-meta.xml
<CustomField>
    <fullName>Standards_Apply_QA_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standards Apply (QA only)</label>
    <type>Checkbox</type>
</CustomField>