force-app/main/default/objects/Case_Participation__c/validationRules/Exp_Relationship_to_Main_Client_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Relationship_to_Main_Client_Check</fullName>
    <active>true</active>
    <description>Checks to make sure that the Relationship to Main Client field is not set if the Participant is the main client on the Case Record.</description>
    <errorConditionFormula>If (Is_Main_Client__c == &apos;Yes&apos; &amp;&amp; NOT(ISBLANK(TEXT( Relationship_to_Main_Client__c ))), true, false)</errorConditionFormula>
    <errorDisplayField>Relationship_to_Main_Client__c</errorDisplayField>
    <errorMessage>The Relationship to Main Client should not be set for the Case Participation record if the Participant is the main client on the Case Record.</errorMessage>
</ValidationRule>