force-app/main/default/objects/Case_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Case_Record__c</columns>
    <columns>Is_Main_Client__c</columns>
    <columns>Relationship_to_Main_Client__c</columns>
    <columns>IsActive__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>